Update about section

--- a/developer/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
+++ b/developer/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
@@ -1,6 +1,6 @@
 ## About
 
-This is Rakibul Hassan Rifat from Bangladesh. To be a skilled and great Software Engineer, for now I am tempted to work with web technology. I will also work with other technologies near future InshaAllah. 
+This is Rakibul Hassan Rifat. To be a skilled and great Software Engineer, for now I am tempted to work with web technology. I will also work with other technologies near future InshaAllah. 
 Currently, I am learning and developing web based applications. I am trying to be a competitive problem solver and solving problems in the Hacker Rank. I have been learning programming on my own since I got acquainted with programming. 
 
 - Currently I'm working on Front End Development
