--- a/developer/src/@lekoarts/gatsby-theme-cara/sections/contact.mdx
+++ b/developer/src/@lekoarts/gatsby-theme-cara/sections/contact.mdx
@@ -1,3 +1,3 @@
 ### Get in touch
 
-Find me on other platforms [LinkedIn](https://www.linkedin.com/in/mrhrifat/)
+Find me on other platforms [GitHub](https://www.github.com/mrhrifat)
